# qwibo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COPYRIGHT  LICENSE  README.md  mkdocs.yml  pyproject.toml  start.bat
.cursor/rules/: github-issues.mdc  no-powershell-scripts.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
bug-fix/: FIX-CODA-STORICO-UI.md  FIX-RIASSUNTO-LLM.md  README.md  TRACCIAMENTO-BUG.md
desktop-electron/: .env.example  .gitignore  README.md  WINDOWS-RELEASE-FIXES.md  build_installer.bat  install.bat  package-lock.json  package.json
desktop-electron/backend/: download_models.py  entrypoint.py  pyproject.toml
docs/en/: changelog.md  (+1 more)
evolutive/: CASI-D-USO.md  EVOLUTIVE-REMOTE.md  README.md
microevolutive/: DESKTOP_CONFRONTO.md  PLAN_BRANDING.md  PLAN_DESKTOP_ELECTRON.md  PLAN_LEAD_GENERATION.md  PLAN_MULTILANG_ASR.md  README.md
requirements/: README.md
scripts/: agent_feedback.py  benchmark_monitor.py  build_qwibo_logos.py  download_model.py  download_summary_llm.py  download_summary_model.py  ensure_local_summary_llm.py  generate_multilang_samples.py  generate_samples.py  github_issue.py  install_local.py  publish_docs.bat  publish_docs.py  restart_ui.py  spike_nemo_language.py  summary_benchmark.py
strategia-release/: 01-HOSTING-E-DISTRIBUZIONE.md  02-MARKETING-E-LANCIO.md  03-BUILD-MACOS.md
tracker/: .feedback_state.json  README.md  github_repo  github_repo.example  github_token.example  import-manifest.example.json  import-manifest.json  labels.yml
(+115 files in other folders)
