[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwibo-desktop-backend"
version = "0.1.0"
description = "Backend Qwibo per app desktop (pacchetto autonomo)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "torch>=2.7",
    "nemo_toolkit[asr]>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "truststore>=0.10",
    "psutil>=6.0",
    "llama-cpp-python>=0.3",
    "huggingface_hub>=0.26",
]

[project.scripts]
qwibo = "qwibo.cli:app"

[tool.setuptools.packages.find]
where = ["vendor"]

[tool.setuptools.package-data]
qwibo = ["ui/templates/**/*", "ui/static/**/*"]
